--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,3 @@
-
-Skip to content
-
-Pull requests
-Issues
-Marketplace
-Explore
-
-@JonathanJacquet
-
-0
-0
-
-0
-
-JonathanJacquet/CVhtml
-Code
-Issues 0
-Pull requests 0
-Projects 0
-Wiki
-Insights
-Settings
-CVhtml/css/main.css
-8b98971 10 minutes ago
-@JonathanJacquet JonathanJacquet cv commit css
-320 lines (251 sloc) 6.25 KB
 /*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
 
 /*
@@ -36,41 +9,12 @@ CVhtml/css/main.css
 /* ==========================================================================
 Base styles: opinionated defaults
 ========================================================================== */
-
 html {
+
 color: #222;
 font-size: 1em;
 line-height: 1.4;
 }
-h1,
-h4 {
-text-align: center;
-}
-
-hr {
-text-align: center;
-}
-
-.center {
-text-align: center;
-}
-
-.colone1 {
-position: absolute;
-margin-left: 500px;
-}
-
-.colone2 {
-position: absolute;
-margin-left: 600px;
-}
-
-.colone3 {
-position: absolute;
-margin-left: 750px;
-}
-
-
 
 /*
 * Remove text-shadow in selection highlight:
@@ -81,6 +25,7 @@ margin-left: 750px;
 *
 * Customize the background color to match your design.
 */
+
 
 ::-moz-selection {
 background: #b3d4fc;
@@ -153,22 +98,176 @@ padding: 0.2em 0;
 Author's custom styles
 ========================================================================== */
 
+#centerE {
+    margin-left: 5%;
+}
+
+#centerF {
+    margin-left: 15%;
+}
+
+#centerCI {
+    margin-top: 1%;
+    margin-left: 60%;
+}
+
+#centerC {
+    margin-left : 50%;
+    padding: 0%;
+}
+.centerH {
+    display: block;
+    margin-left: auto;
+    margin-right: 40%;
+    text-align:center;
+}
+
+.centerL{
+    margin-left: 3%;
+}
+
+.centerT {
+    display: block;
+    margin-left: auto;
+    margin-right: 1%;
+    text-align:center;
+    margin-top: -2%;
+}
+
+.columnF {
+    display: block;
+    margin-left: 55%;
+}
+
+.columnE {
+    display: block;
+    margin-left: 25%;
+    margin-top: -26%;
+}
+
+.columnCI {
+    display: block;
+    margin-left: 60%;
+    margin-top: 5%;
+    columns: 2 5px;
+}
+
+.columnL {
+    display: block;
+    margin-left: 30%;
+    margin-top: -17%;
+}
+
+.columnCDI {
+    display: block;
+    margin-left: 45%;
+    margin-top: 15%;
+}
+
+.columnC {
+    display: block;
+    margin-left: 10%;
+}
 
 
+.id {
+    margin-left: 60%;
+    margin-top: 1%;
+}
 
+.ai {
+    margin-left : 59%;
+}
 
+.ps {
+    margin-left: 60%;
+    margin-top: 2%;
+}
 
+.html5 {
+    margin-left: 70%;
+    margin-top: -20%;
+}
 
+.css3 {
+    margin-left: 70%;
+}
 
+.javajs {
+    margin-left: 70%;
+    margin-top: -7%;
+}
 
+.house {
+    margin-left: 35%;
+    margin-top: 1%;
+}
 
+.grasC {
+    font-weight: bold;
+}
+#house {
+    margin-left: -13%;
+}
 
+.tel {
+    margin-left: 52%;
+    margin-top: -6%;
+}
 
+#tel {
+    margin-left: -4%;
+}
 
+.mel {
+    margin-left: 65%;
+    margin-top: -6%;
+}
 
+#mel {
+    margin-left: -15%;
+}
 
+.bordureG {
+    width: 400px;
+    height: 1650px;
+    background:black;
+    margin-top: -98%;
+    background-image:linear-gradient(black, white);
+   }
 
+.bordureD {
+    width: 400px;
+    height: 1850px;
+    background: black;
+    margin-top: -95%;
+    margin-left: 80%;
+    background-image:linear-gradient(black, white);
+}
 
+h1 {
+    font-family:"Bauhaus 93";
+    font-size: 50px;
+}
+
+h2 {
+    font-family:"Bauhaus 93";
+    font-size: 35px;
+}
+
+h3 {
+    font-family:"Bauhaus 93";
+    font-size: 30px;
+}
+
+.introH {
+    font-family:"Bauhaus 93";
+    font-size: 20px;
+}
+
+body {
+    font-family:"DejaVu Sans"
+}
 /* ==========================================================================
 Helper classes
 ========================================================================== */
@@ -340,23 +439,6 @@ h2,
 h3 {
     page-break-after: avoid;
 }
-left {
-    text-align: right;
-}
+
 }
 
-© 2018 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-
-Press h to open a hovercard with more details.
