--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,10 @@ h3 {
 body {
     font-family:"DejaVu Sans"
 }
+
+hr {
+    width: 45%;
+}
 /* ==========================================================================
 Helper classes
 ========================================================================== */
